# Oracle

./: .gitignore  CHANGELOG.md  README.md  build.gradle.kts  settings.gradle.kts
.github/actions/gpu-deps/: action.yml
.github/workflows/: ci.yml  instrumented.yml  release.yml  testlab.yml
app/: build.gradle.kts  google-services.json.example  proguard-rules.pro
app/src/androidTest/java/sg/act/domain/: ChatSmokeTest.kt
app/src/debug/: AndroidManifest.xml
app/src/debug/res/xml/: file_paths.xml
app/src/main/: AndroidManifest.xml
app/src/main/java/sg/act/domain/: DomainApp.kt  MainActivity.kt
app/src/main/java/sg/act/domain/core/: CrashReporting.kt  Diagnostics.kt  DownloadNotifier.kt  ForegroundWork.kt  InferenceService.kt
app/src/main/java/sg/act/domain/data/local/: AcceptanceStore.kt  ConversationStore.kt  ModelProfileStore.kt  ModelStorage.kt  ModelStore.kt  RemoteConfigStore.kt  SelectionStore.kt
app/src/main/java/sg/act/domain/data/model/: Models.kt
app/src/main/java/sg/act/domain/data/repository/: ChatRepository.kt
app/src/main/java/sg/act/domain/inference/: ContextSettings.kt  GpuGuard.kt  HuggingFaceClient.kt  InferenceEngine.kt  LlamaCppBackend.kt  LocalEngine.kt  ModelCatalog.kt  ModelDownloader.kt  ModelManager.kt  ModelProfile.kt  OpenRouterClient.kt  PrivacyRouter.kt  RemoteEngine.kt  SpaceClient.kt  ThreadSettings.kt
app/src/main/java/sg/act/domain/privacy/: DeviceCapabilities.kt  NetworkGuard.kt  PiiRedactor.kt  PrivacySettings.kt  PrivacyState.kt
app/src/main/java/sg/act/domain/ui/acceptance/: AcceptanceScreen.kt
app/src/main/java/sg/act/domain/ui/chat/: ChatScreen.kt  ChatViewModel.kt
app/src/main/java/sg/act/domain/ui/components/: Components.kt  MarkdownMessage.kt
app/src/main/java/sg/act/domain/ui/theme/: Theme.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: colors.xml  dimens.xml  integers.xml  strings.xml  themes.xml
app/src/main/res/values-night/: colors.xml
app/src/main/res/xml/: data_extraction_rules.xml
app/src/test/java/sg/act/domain/inference/: ModelCatalogTest.kt  PrivacyRouterTest.kt
app/src/test/java/sg/act/domain/privacy/: PiiRedactorTest.kt
backend/: CHANGELOG.md  Dockerfile  README.md  engine.py  main.py
docs/: ARCHITECTURE.md  CI.md  MODEL_SELECTION.md  PRIVACY.md  TESTING.md  adpf-spec.md  oracle-agent.md
docs/release-notes/: v1.01.md  v1.05.md  v1.08.md
gradle/: libs.versions.toml
llama/: build.gradle.kts
llama/src/main/cpp/: CMakeLists.txt  LLAMA_CPP_VERSION.txt  host-toolchain.cmake  llama-android.cpp
llama/src/main/cpp/llama.cpp/ggml/src/ggml-vulkan/: ggml-vulkan.cpp
llama/src/main/java/sg/act/domain/llama/: LLamaAndroid.kt
(+2 files in other folders)
